[LSP-751] refactor maven plugin
GitOrigin-RevId: 3d085e1c5e5e6edd32b9735f75df8c53ed65db0b